--- a/wiki/ExportFormat.wiki
+++ b/wiki/ExportFormat.wiki
@@ -41,7 +41,7 @@ Key to this is that when you choose to move your Mine! from one hosting provider
   * Where N or M is greater than value K
     * it will be replaced with a directory bucket named X ...
     * and reference a file named N in that directory X
-    * X = K * int( N / K )
+    * {{{ X = K * int( N / K ) }}}
     * hence where for example K = 100:
       * tags/500/512
       * relations/1100/1199
