Edited wiki page through web user interface.

--- a/wiki/MineStandard.wiki
+++ b/wiki/MineStandard.wiki
@@ -4,9 +4,22 @@
 
 A first stab at a list of structural and technical qualities that are necessary for a Mine to be called a Mine.
 
+
 = Mine Technical Requirements =
 
-== A Mine exists for the benefit of its owner, aka: user ==
+== Definitions ==
+
+  * _user_ - the person with autocracy over their mine
+  * _owner_ - synonym for user
+  * _subscriber_ - those who receive feeds from an user's mine
+
+  * _minekey_
+  * _browser_
+  * _uploader_
+  * _scraper_
+  * _backup_
+
+== A Mine exists for the benefit of its User ==
 
 Rule zero.
 
@@ -16,9 +29,9 @@ This is the guiding principle of a Mine; a user's Mine _must_ be under his contr
 
 == The Mine root URL must be user-distinct ==
 
-Any given Mine _must_ have a distinct "root" URL to separate it from the mines of other users; eg: where _alec_ represents an individual user...
+Any given Mine _must_ have a distinct "root" URL (hostname and path) to separate it from the mines of other users; eg: where _alec_ represents an given user...
 
-  # GOOD 
+  GOOD 
   * http://alec.domain.com/ 
   * http://alec.domain.com/mine/ 
   * http://www.alec.com/ 
@@ -27,13 +40,13 @@ Any given Mine _must_ have a distinct "root" URL to separate it from the mines o
   * http://www.domain.com/alec/mine/ 
   * http://www.domain.com/mine/alec/ 
 
-  # BAD
+  BAD
   * http://www.domain.com/
   * http://www.domain.com/mine/
   * http://www.domain.com/mine/?user=alec
   * _anything involving cookies for identity_
 
-== Mine Key Separation ==
+== Minekey Separation ==
 
 Separate mines _must_ have separate global crypto keys for separate minekey protection.
 
@@ -45,14 +58,18 @@ The data it stores _should_ be under the user's physical control, or otherwise s
 
 All user access to/from a Mine _must_ be authenticated, eg: passworded; this includes browser, uploader, scraper and backup applications.
 
-All data shared from a Mine to mine-subscribers, ie: feeds, _must_ be authenticated by MineKey.
+All data shared from a Mine to subscribers _must_ be authenticated by minekey.
 
 == Secrecy of Data at Rest ==
 
-All data stored in a Mine _must_ be private to the owner, unless the owner elects to share items to mine-subscribers.
+All data (and metadata) stored in a Mine _must_ by default be private to the user, and remains so unless the user elects to share items to subscribers.
 
 == Secrecy of Data in Motion ==
 
 All user access to/from a Mine _must_ be encrypted (eg: SSL); this includes browser, uploader, scraper and backup applications.
 
 All data shared from a Mine to mine-subscribers, ie: feeds, _should_ be encrypted (eg: SSL). We expect this requirement to become a "_must_" by 2012.
+
+== Subscriber access to depth ==
+
+== Next? ==
