Edited wiki page through web user interface.

--- a/wiki/InstallationNotes.wiki
+++ b/wiki/InstallationNotes.wiki
@@ -1,1 +1,7 @@
-This page changes too rapidly, so for the moment has been replaced by README-INSTALL.TXT in the code repository.  Please see that document instead.
+This page changes too rapidly, so for the moment has been replaced by README-INSTALL.TXT in the code repository.  
+
+Please see that document instead.
+
+To get your own copy of the repository, please install one via:
+
+{{{ cd ; svn checkout http://protomine.googlecode.com/svn/trunk/ protomine }}}
